--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,9 @@ description = "An API to POSIX IPC primitives"
 repository = "http://github.com/codius/rust-posix-ipc"
 license = "MIT"
 readme = "README.md"
+
+[dependencies]
+num="0.1.30"
+nix="0.4.2"
+enum_primitive="0.1.0"
+libc="0.2.4"
